corrected positioning of search_resuelts_section when viewing on iphone in portrait mode

--- a/styles.css
+++ b/styles.css
@@ -382,6 +382,10 @@ span {
     overflow-y: scroll;
   }
 
+    #search_results_section {
+    top: 0px !important;
+  }
+
 }
 
 @media only screen
@@ -472,7 +476,7 @@ span {
   }
 }
 
-@media only screen and (min-width: 520px) and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
   #search_results_section {
     top: 80px;
   }
